{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 85,
  "lineage": "2a1f10f7-3d57-e4a2-1add-e503246826c7",
  "resources": [
    {
      "module": "module.Jenkins_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:939621893623:instance/i-093ece4b7d902e293",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093ece4b7d902e293",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "carlosqalaptop",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01eeef489a074ce7a",
            "private_dns": "ip-10-0-1-142.eu-west-1.compute.internal",
            "private_ip": "10.0.1.142",
            "public_ip": "52.215.183.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b1ea452a27446f09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba7f175bf54a65a9",
            "tags": {
              "Name": "Jenkins_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054e07fc89255c7f2"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.publicA",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_webserver_sg.aws_security_group.wsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Test_VM",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:939621893623:instance/i-0483fdf646746a7ef",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0483fdf646746a7ef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "carlosqalaptop",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aef113ef11b701c6",
            "private_dns": "ip-10-0-1-156.eu-west-1.compute.internal",
            "private_ip": "10.0.1.156",
            "public_ip": "34.245.37.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b4fec5e5db09a48b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba7f175bf54a65a9",
            "tags": {
              "Name": "Test_VM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054e07fc89255c7f2"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.publicA",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_webserver_sg.aws_security_group.wsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939621893623:internet-gateway/igw-0bd576e98feaff159",
            "id": "igw-0bd576e98feaff159",
            "owner_id": "939621893623",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-01858e908b7618ef7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-096de295a12baffea",
            "owner_id": "939621893623",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd576e98feaff159",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-01858e908b7618ef7"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subA_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe3fa043d4847f8d",
            "route_table_id": "rtb-096de295a12baffea",
            "subnet_id": "subnet-0ba7f175bf54a65a9"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.publicA",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subB_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0719b1241bfa47093",
            "route_table_id": "rtb-096de295a12baffea",
            "subnet_id": "subnet-0f7835d084caaca0e"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.publicB",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subC_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0380dfb7548a13895",
            "route_table_id": "rtb-096de295a12baffea",
            "subnet_id": "subnet-0535a2ac8e9e8af2e"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.publicC",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939621893623:subnet/subnet-0ba7f175bf54a65a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ba7f175bf54a65a9",
            "map_public_ip_on_launch": false,
            "owner_id": "939621893623",
            "vpc_id": "vpc-01858e908b7618ef7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939621893623:subnet/subnet-0f7835d084caaca0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f7835d084caaca0e",
            "map_public_ip_on_launch": false,
            "owner_id": "939621893623",
            "vpc_id": "vpc-01858e908b7618ef7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939621893623:subnet/subnet-0535a2ac8e9e8af2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0535a2ac8e9e8af2e",
            "map_public_ip_on_launch": false,
            "owner_id": "939621893623",
            "vpc_id": "vpc-01858e908b7618ef7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939621893623:vpc/vpc-01858e908b7618ef7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c73e87df7fb0a31",
            "default_route_table_id": "rtb-0fcf05b71aea1768b",
            "default_security_group_id": "sg-0abd9d1f6bee61e44",
            "dhcp_options_id": "dopt-21a09b47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01858e908b7618ef7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fcf05b71aea1768b",
            "owner_id": "939621893623"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_webserver_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939621893623:security-group/sg-054e07fc89255c7f2",
            "description": "Allow SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054e07fc89255c7f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSG",
            "name_prefix": "",
            "owner_id": "939621893623",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01858e908b7618ef7"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}